add some more features eg midpoint setter

--- a/blender_manifest.toml
+++ b/blender_manifest.toml
@@ -18,8 +18,10 @@ clipboard = "Need clipboard access to copy paths"
 [build]
 paths = [
     "__init__.py",
-    "operators.py",
+    "overlay.py",
     "properties.py",
     "register_quadgrab.py",
     "ui.py",
+    "ops/",
+    "util/",
 ]
