--- a/blender_manifest.toml
+++ b/blender_manifest.toml
@@ -1,7 +1,7 @@
 schema_version = "1.0.0"
 
 id = "lks_quadgrab"
-version = "1.1.2"
+version = "1.1.3"
 name = "LKS QuadGrab"
 tagline = "QuadGrab"
 maintainer = "LKS <Liam@lksgraphics.ca>"
@@ -16,12 +16,23 @@ files = "Need file access to save textures"
 clipboard = "Need clipboard access to copy paths"
 
 [build]
-paths = [
-    "__init__.py",
-    "overlay.py",
-    "properties.py",
-    "register_quadgrab.py",
-    "ui.py",
-    "ops/",
-    "util/",
+paths_exclude_pattern = [
+    "__pycache__/",
+    ".*",
+    "/*.zip",
+    "*.blend*",
+    "/tests/",
+    "/debug/",
+    "/docs/",
+    "/examples/",
+    "/prompt/",
+    "/quadgrab/",
+    "/dependencies/",
+    "*.bat",
+    "*.md",
+    "/test.py",
+    "/main.py",
+    "/publish_*.py",
+    "/release.py",
+    "/requirements.txt",
 ]
